WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212344
[GTK4] Fix context menu
https://bugs.webkit.org/show_bug.cgi?id=212344
Summary
[GTK4] Fix context menu
Carlos Garcia Campos
Reported
2020-05-25 05:19:19 PDT
It doesn't appear on right click. A warning is shown instead.
Attachments
Patch
(4.05 KB, patch)
2020-05-25 05:24 PDT
,
Carlos Garcia Campos
aperez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2020-05-25 05:24:04 PDT
Created
attachment 400196
[details]
Patch
EWS Watchlist
Comment 2
2020-05-25 05:24:45 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Adrian Perez
Comment 3
2020-05-25 06:32:02 PDT
Comment on
attachment 400196
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=400196&action=review
> Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:859 > + gtk_native_check_resize(GTK_NATIVE(priv->activeContextMenuProxy->gtkWidget()));
Cannot we do this inside “WebContextMenuProxyGtk”? We know that the web view widget is valid when instantiating it, so I would expect that calling “gtk_native_check_resize()” after setting the web view as parent widget could work as well 🤔️
Carlos Garcia Campos
Comment 4
2020-05-26 00:47:20 PDT
(In reply to Adrian Perez from
comment #3
)
> Comment on
attachment 400196
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=400196&action=review
> > > Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:859 > > + gtk_native_check_resize(GTK_NATIVE(priv->activeContextMenuProxy->gtkWidget())); > > Cannot we do this inside “WebContextMenuProxyGtk”? We know that the > web view widget is valid when instantiating it, so I would expect that > calling “gtk_native_check_resize()” after setting the web view as parent > widget could work as well 🤔️
It needs to be called by the parent in its size_request.
Carlos Garcia Campos
Comment 5
2020-05-26 00:59:37 PDT
Committed
r262137
: <
https://trac.webkit.org/changeset/262137
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug