[GTK4] Fix context menu https://bugs.webkit.org/show_bug.cgi?id=212344

Reviewed by Adrian Perez de Castro.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseSizeAllocate): Call gtk_native_check_resize() on the popover to make it appear.
* UIProcess/gtk/WebContextMenuProxyGtk.cpp:
(WebKit::destroyMenuWidget): There's no gtk_widget_destroy() in GTK4 so we can just unparent it.
(WebKit::bindModelToMenuWidget): Do not set the action namespace because that's not possible in GTK4.
(WebKit::WebContextMenuProxyGtk::append): Use group.name again for the action name passed to
g_menu_item_set_action_and_target_value().
(WebKit::WebContextMenuProxyGtk::~WebContextMenuProxyGtk): Use destroyMenuWidget().

Canonical link: https://commits.webkit.org/225200@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262137 268f45cc-cd09-0410-ab3c-d52691b4dbfc